# python_labs

./: .coverage  .gitignore  README.md
1stSem_1stYear/lab02/: README.md
1stSem_1stYear/lab03/: README.md
1stSem_1stYear/lab04/: README.md
1stSem_1stYear/lab05/: README.md
1stSem_1stYear/lab06/: README.md
Year1_Sem1/: README.md  pyproject.toml
Year1_Sem1/data/lab09/: students.csv
Year1_Sem1/data/samples/: students.json
Year1_Sem1/lab01/: README.md
Year1_Sem1/lab01/src/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  06.py  07.py
Year1_Sem1/lab02/: README.md
Year1_Sem1/lab02/src/: arrays.py  arrays_te.py  matrix_te.py  tuples.py  tuples_te.py
Year1_Sem1/lab03/: README.md
Year1_Sem1/lab03/src/: text.py  text_st.py  text_stats.py
Year1_Sem1/lab04/: README.md
Year1_Sem1/lab04/src/: io_txt_csv.py  text_report.py
Year1_Sem1/lab05/: README.md
Year1_Sem1/lab05/src/: testconv.py  testxlsx.py
Year1_Sem1/lab06/: README.md
Year1_Sem1/lab06/src/: cli_convert.py  cli_text.py
Year1_Sem1/lab07/: README.md
Year1_Sem1/lab08/: README.md
Year1_Sem1/lab08/src/: models.py  tester.py
Year1_Sem1/lab09/: README.md
Year1_Sem1/lab09/src/: group.py  tester.py
Year1_Sem1/lab10/: README.md
Year1_Sem1/lab10/src/: linked_list.py  structures.py
Year1_Sem1/lib/: json_csv.py  matrix.py
Year1_Sem1/student_lab.egg-info/: PKG-INFO  SOURCES.txt
Year1_Sem1/tests/: test_json_csv.py  test_text.py
Year1_Sem1/tests/python_labs.egg-info/: PKG-INFO  SOURCES.txt
Year1_Sem2/: README.md
src/lab01/: 06.py  (+8 more)
(+45 files in other folders)
